# TinyTorch

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
.github/workflows/: cmake_linux.yml  cmake_macos.yml  cmake_windows.yml
TinyTorch/: Allocator.cpp  Allocator.h  Blas.cpp  Blas.h  CMakeLists.txt  Data.cpp  Data.h  Function.cpp  Function.h  Init.cpp  Init.h  Logger.cpp  Logger.h  Loss.cpp  Loss.h  Module.cpp  Module.h  Optimizer.cpp  Optimizer.h  Scheduler.cpp  Scheduler.h  Tensor.cpp  Tensor.h  TensorImpl.cpp  TensorImpl.h  Timer.cpp  Timer.h  Torch.cpp  Torch.h
TinyTorch/TensorImpl/: TensorImpl.cpp  TensorImpl.h  TensorImpl_base.cpp  TensorImpl_base.h  TensorImpl_cpu.cpp  TensorImpl_cpu.h  TensorImpl_cpu.inc  TensorImpl_cuda.cu  TensorImpl_cuda.cuh  TensorImpl_cuda.inc
demo/: CMakeLists.txt  demo.h  demo_autograd.cpp  demo_ddp.cpp  demo_mnist.cpp  demo_module.cpp  demo_nccl.cpp  demo_optim.cpp  main.cpp
examples/: CMakeLists.txt
examples/autograd/: CMakeLists.txt  main.cpp
examples/ddp/: CMakeLists.txt  main.cpp
examples/mnist/: CMakeLists.txt  main.cpp
examples/module/: CMakeLists.txt  main.cpp
examples/nccl/: CMakeLists.txt  main.cpp
examples/optimizer/: CMakeLists.txt  main.cpp
src/: CMakeLists.txt  Data.cpp  Data.h  Functions.h  Initializer.cpp  Initializer.h  Loss.h  Module.cpp  Module.h  Modules.h  Operations.h  Optimizer.cpp  Optimizer.h  Scheduler.h  Serializer.cpp  Serializer.h  Tensor.h  TinyTorch.h
src/Data/: DataLoader.h  Dataset.h  DatasetMNIST.cpp  DatasetMNIST.h  Sampler.h  Transform.h
src/Distributed/: Backend.h  BackendNCCL.cpp  BackendNCCL.h  DistributedModule.cpp  DistributedModule.h  DistributedProcessGroup.cpp  DistributedProcessGroup.h  DistributedSampler.cpp  DistributedSampler.h  FileStore.cpp  FileStore.h  NCCLUtils.h  ProcessGroup.cpp  ProcessGroup.h  Reducer.cpp  Reducer.h  Store.cpp  Store.h  TCPStore.cpp  TCPStore.h  Types.h  Work.h  WorkNCCL.cpp  WorkNCCL.h
src/Function/: FuncActivation.h  FuncElemWise.cpp  FuncElemWise.h  FuncFused.h  FuncLinalg.h  FuncLoss.h  FuncNNLayer.h  FuncReduce.h  FuncSampling.h  FuncTransform.h
src/Module/: Basic.cpp  Basic.h  Loss.cpp  Loss.h  Module.h  Norm.cpp  Norm.h
src/Operation/: OpElemWise.h  OpElemWiseCpu.cpp  OpElemWiseCpu.h  OpElemWiseCuda.cu  OpElemWiseCuda.cuh  OpFilling.h  OpFillingCpu.cpp  OpFillingCpu.h  OpFillingCuda.cu  OpFillingCuda.cuh  OpFused.h  OpFusedCpu.cpp  OpFusedCpu.h  OpFusedCuda.cu  OpFusedCuda.cuh  OpLinalg.cpp  OpLinalg.h  OpLinalgCpu.cpp  OpLinalgCpu.h  OpLinalgCuda.cu  OpLinalgCuda.cuh  OpLoss.h  OpLossCpu.cpp  OpLossCpu.h  OpLossCuda.cu  OpLossCuda.cuh  OpNNLayer.cpp  OpNNLayer.h  OpNNLayerCpu.cpp  OpNNLayerCpu.h  OpNNLayerCuda.cu  OpNNLayerCuda.cuh  OpReduce.cpp  OpReduce.h  OpReduceCpu.cpp  OpReduceCpu.h  OpReduceCuda.cu  OpReduceCuda.cuh  OpSampling.h  OpSamplingCpu.cpp  (+9 more)
src/Operation/FlashAtten/: config.cuh  gemm.cuh  kernel.cuh  launcher.cuh  layout.cuh  memory.cuh  params.cuh  softmax.cuh  tile.cuh  utils.cuh
src/Tensor/: Allocator.cpp  Allocator.h  AutogradHook.h  AutogradMeta.cpp  AutogradMeta.h  CachedAllocator.cpp  CachedAllocator.h  DType.h  Device.h  Dispatch.h  Function.cpp  Function.h  IValue.h  NoGradGuard.cpp  NoGradGuard.h  Options.h  Scalar.h  Storage.cpp  Storage.h  Tensor.cpp  Tensor.h  TensorImpl.cpp  TensorImpl.h  TensorIterator.cpp  TensorIterator.cuh  TensorIterator.h  TensorPrinter.cpp  TensorPrinter.h  TensorSerializer.cpp  TensorSerializer.h
src/Utils/: ArrayView.h  BFloat16.h  CUDAGraph.cpp  CUDAGraph.h  CUDAMath.h  CUDATypes.h  CUDAUtils.cpp  CUDAUtils.h  Half.h  Logger.cpp  Logger.h  MMapUtils.cpp  MMapUtils.h  Macros.h  MathUtils.cpp  MathUtils.h  Profiler.cpp  Profiler.h  RandomGenerator.cpp  RandomGenerator.h  SmallVector.h  Timer.cpp  Timer.h  VectorUtils.h
test/: CMakeLists.txt  main.cpp  test.cpp  test.h  test_allocator.cpp  test_autograd.cpp  test_function.cpp  test_module.cpp  test_operation.cpp  test_optimizer.cpp  test_tensor.cpp  test_tensorimpl.cpp
