cmake_minimum_required(VERSION 3.12)
project(TinyTorch_lib)

set(CMAKE_CXX_STANDARD 17)
set(CMAKE_CXX_STANDARD_REQUIRED ON)

if (${TINYTORCH_USE_CUDA})
    set(CMAKE_CUDA_ARCHITECTURES "60;70;75;80")
    set(CMAKE_CUDA_FLAGS "${CMAKE_CUDA_FLAGS} --extended-lambda")
    find_package(CUDAToolkit REQUIRED)
    enable_language(CUDA)
endif ()

file(GLOB_RECURSE TinyTorch_src "./*.cpp" "./*.cu")
add_library(${PROJECT_NAME} ${TinyTorch_src})

if (CMAKE_BUILD_TYPE STREQUAL Debug)
    add_definitions(-DDEBUG)
elseif (CMAKE_BUILD_TYPE STREQUAL Release)
    add_definitions(-DNDEBUG)
    if (MSVC)
        set_source_files_properties(${TinyTorch_src} PROPERTIES COMPILE_FLAGS "/Ox")
    else ()
        set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -O3")
    endif ()
endif ()

if (${TINYTORCH_USE_CUDA})
    target_include_directories(${PROJECT_NAME} PUBLIC ${CMAKE_CURRENT_SOURCE_DIR} ${CUDA_INCLUDE_DIRS})
    target_link_libraries(${PROJECT_NAME} CUDA::cudart CUDA::curand CUDA::cublas)
else ()
    target_include_directories(${PROJECT_NAME} PUBLIC ${CMAKE_CURRENT_SOURCE_DIR})
endif ()
